feat: support multi-file code execution with language versioning, stdin, args, and resource limits